[package]
name = "ics2000-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
serde = "1.0.154"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ics2000-rs = { path = "../ics2000-rs" }
tokio = { version = "1.26.0", features = ["full"] }
axum-macros = "0.3.5"
serde_json = "1.0.94"
